Fix layout to avoid cutting off bottom of content, center login message.

--- a/src/app/components/app-sidenav/app-sidenav.component.css
+++ b/src/app/components/app-sidenav/app-sidenav.component.css
@@ -1,20 +1,17 @@
-.mat-sidenav-container {
-  height: 100%;
-  position: relative;
-}
-
-.mat-nav-list .mat-list-item {
-  font-size: 14px;
-  font-weight: 500;
+md-sidenav-container {
+  flex-grow: 1;
 }
 
 md-sidenav {
   width: 200px;
 }
 
-md-nav-list > md-list-item {
+md-nav-list md-list-item {
   display: flex;
   flex-direction: column;
+
+  font-size: 14px;
+  font-weight: 500;
 }
 
 md-nav-list md-icon {
