--- a/src/app/components/app/app.component.css
+++ b/src/app/components/app/app.component.css
@@ -1,8 +1,12 @@
-.ng-material-main-container {
-  overflow: hidden;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+.main-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+
+app-sidenav {
+  flex-grow: 1;
+  display: flex;
 }
